adding callbacks for stockx api oauth

--- a/.env.template
+++ b/.env.template
@@ -1,15 +1,25 @@
-# === MongoDB ===
-# See https://www.mongodb.com/docs/manual/reference/connection-string/
-DB_URL=mongodb+srv://[username:password@]host[/[defaultauthdb][?options]]
-# The name of the database that solesearch-ingest writes to
-DB_NAME=Sneakers
-# The name of the collection that solesearch-ingest writes to
-SNEAKERS_COLLECTION=sneakers
-
 # === Preferences ===
 # The default number of sneakers to return in a single request
-DEFAULT_LIMIT=20
+SOLESEARCH_DEFAULT_LIMIT=20
 # The maximum number of sneakers to return in a single request
-MAX_LIMIT=100
+SOLESEARCH_MAX_LIMIT=100
 # The default number of sneakers to skip in a single request
-DEFAULT_OFFSET=0
+SOLESEARCH_DEFAULT_OFFSET=0
+# ====================
+
+# === MongoDB ===
+# See https://www.mongodb.com/docs/manual/reference/connection-string/
+SOLESEARCH_DB_CONNECTION_STRING=mongodb+srv://[username:password@]host[/[defaultauthdb][?options]]
+# The name of the database that SoleSearch-ingest writes to
+SOLESEARCH_DB_NAME=Sneakers
+# The name of the collection that SoleSearch-ingest writes to
+SOLESEARCH_DB_PRIMARY_COLLECTION=sneakers
+# ===============
+
+# === StockX API ===
+# See https://developer.stockx.com/
+SOLESEARCH_STOCKX_API_KEY=
+SOLESEARCH_STOCKX_CLIENT_ID=
+SOLESEARCH_STOCKX_CLIENT_SECRET=
+SOLESEARCH_STOCKX_CALLBACK_URL=https://localhost:3000/auth/stockx
+# ===================
