--- a/.github/workflows/deploy-to-lambda.yml
+++ b/.github/workflows/deploy-to-lambda.yml
@@ -52,3 +52,18 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: dist/*.zip
+
+      - name: Deploy to Lambda
+        uses: appleboy/lambda-action@v0.1.9
+        with:
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_region: us-east-1
+          function_name: solesearch-api
+          zip_file: $build_file
+          timeout: 10
+          handler: main.handler
+          runtime: python3.12
+          role: arn:aws:iam::930702711470:role/service-role/solesearch-api-role-qr34kqa5
+          dry_run: true
+          debug: true
