--- a/.github/workflows/deploy-to-lambda.yml
+++ b/.github/workflows/deploy-to-lambda.yml
@@ -1,8 +1,8 @@
-name: Build Deployment Image
+name: Deploy to AWS Lambda
 on:
   push:
-    tags:
-      - "*"
+    branches:
+      - deploy
 
 permissions:
   contents: write
@@ -48,12 +48,6 @@ jobs:
           cd ${{ github.workspace }}
           cp $build_file ${{ github.workspace }}/deploy.zip
         shell: bash
-
-      - name: Publish to Github
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: dist/*.zip
 
       - name: Deploy to Lambda
         uses: appleboy/lambda-action@v0.1.9
