--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,11 @@ requires-python = ">=3.12"
 dependencies = [
   "fastapi",
   "motor",
+  "beanie",
   "python-dotenv",
   "uvicorn",
   "pydantic",
   "mangum",
-  "Authlib",
   "requests",
   "Starlette",
   "itsdangerous",
