OpenAPI metadata changes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
 ]
 
 [tool.hatch.version]
-path = "src/api/__about__.py"
+path = "src/api/main.py"
 
 [tool.hatch.metadata]
 allow-direct-references = true
