--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ sqlalchemy = "^2.0.32"
 free-proxy = "^1.1.1"
 sgqlc = "^16.3"
 itsdangerous = "^2.2.0"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "*"
