--- a/.env.template
+++ b/.env.template
@@ -1,18 +1,19 @@
 # === Preferences ===
+# The environment to run the application in: development, staging, or production
+SOLESEARCH_ENVIRONMENT=development
 # The default number of sneakers to return in a single request
 SOLESEARCH_DEFAULT_LIMIT=20
 # The maximum number of sneakers to return in a single request
 SOLESEARCH_MAX_LIMIT=100
 # ====================
 
-# === MongoDB ===
-# See https://www.mongodb.com/docs/manual/reference/connection-string/
-SOLESEARCH_DB_CONNECTION_STRING=mongodb+srv://[username:password@]host[/[defaultauthdb][?options]]
-# The name of the database that SoleSearch-ingest writes to
-SOLESEARCH_DB_NAME=Sneakers
-# The name of the collection that SoleSearch-ingest writes to
-SOLESEARCH_DB_PRIMARY_COLLECTION=sneakers
+# === PostgreSQL ===
+SOLESEARCH_DB_CONNECTION_STRING=postgresql://[user:password@hostname:portnum/database]
 # ===============
+
+# === Redis ===
+SOLESEARCH_REDIS_URL=redis://[hostname:portnum]/1
+# =============
 
 # === StockX API ===
 # See https://developer.stockx.com/
