--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ motor = "^3.6.0"
 python-dotenv = "^1.0.1"
 itsdangerous = "^2.2.0"
 requests = "^2.32.3"
+celery = {extras = ["redis"], version = "^5.4.0"}
 
 
 [tool.poetry.group.dev.dependencies]
