Cleaning up some messy stuff from SQL move

--- a/.env.template
+++ b/.env.template
@@ -1,18 +1,18 @@
 # === Preferences ===
 # The environment to run the application in: development, staging, or production
-SOLESEARCH_ENVIRONMENT=development
+SOLESEARCH_ENVIRONMENT=
 # The default number of sneakers to return in a single request
-SOLESEARCH_DEFAULT_LIMIT=20
+SOLESEARCH_DEFAULT_LIMIT=
 # The maximum number of sneakers to return in a single request
-SOLESEARCH_MAX_LIMIT=100
+SOLESEARCH_MAX_LIMIT=
 # ====================
 
 # === PostgreSQL ===
-SOLESEARCH_DB_CONNECTION_STRING=postgresql://[user:password@hostname:portnum/database]
+SOLESEARCH_DB_CONNECTION_STRING=
 # ===============
 
 # === Redis ===
-SOLESEARCH_REDIS_URL=redis://[hostname:portnum]/1
+SOLESEARCH_REDIS_URL=
 # =============
 
 # === StockX API ===
@@ -20,7 +20,7 @@ SOLESEARCH_REDIS_URL=redis://[hostname:portnum]/1
 SOLESEARCH_STOCKX_API_KEY=
 SOLESEARCH_STOCKX_CLIENT_ID=
 SOLESEARCH_STOCKX_CLIENT_SECRET=
-SOLESEARCH_STOCKX_CALLBACK_URL=https://localhost:8000/auth/stockx
+SOLESEARCH_STOCKX_CALLBACK_URL=
 SOLESEARCH_STOCKX_CALLBACK_STATE=
 SOLESEARCH_SESSION_SECRET=
 # ===================
