--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,11 @@
-# === Preferences ===
+# === Environment ===
 # The environment to run the application in: development, staging, or production
 SOLESEARCH_ENVIRONMENT=
+# The version of the solesearch_common package to use, "local" for editable install
+SOLESEARCH_COMMON_VERSION=
+# ====================
+
+# === Preferences ===
 # The default number of sneakers to return in a single request
 SOLESEARCH_DEFAULT_LIMIT=
 # The maximum number of sneakers to return in a single request
