Switch to the solesearch_common package for model sharing (#28)
Co-authored-by: Peter Rauscher <peter.rauscher@perpay.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{ include = "api", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "3.12.5"
+solesearch-common = { path = "../common/src/solesearch_common", develop = true }
 sqlmodel = "^0.0.22"
 fastapi = { extras = ["uvicorn"], version = "^0.115.0" }
 uvicorn = "^0.31.0"
