It works! Fuck circular imports.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     build: .
     container_name: sneakers_worker
     working_dir: /app
-    command: celery -A api.tasks worker --loglevel=info
+    command: celery -A solesearch_api.tasks worker --loglevel=info
     depends_on:
       - api
       - redis
