add celery beat container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,20 @@ services:
     env_file:
       - ".env"
 
+  celery_beat:
+    build: .
+    container_name: sneakers_beat
+    command: celery -A solesearch_api.tasks beat --loglevel=info
+    depends_on:
+      - api
+      - redis
+      - rabbitmq
+    networks:
+      - sneakers_network
+    restart: always
+    env_file:
+      - ".env"
+
   nginx:
     image: nginx:alpine-slim
     container_name: sneakers_nginx
