Nike ingest working 💪

--- a/.env.template
+++ b/.env.template
@@ -1,22 +1,24 @@
 # === Environment ===
 # The environment to run the application in: development, staging, or production
-SOLESEARCH_ENVIRONMENT=
-# ====================
-
-# === Preferences ===
-# The default number of sneakers to return in a single request
-SOLESEARCH_DEFAULT_LIMIT=
-# The maximum number of sneakers to return in a single request
-SOLESEARCH_MAX_LIMIT=
+ENVIRONMENT=
 # ====================
 
 # === PostgreSQL ===
-SOLESEARCH_DB_CONNECTION_STRING=
+DB_CONNECTION_STRING=
 # ===============
 
-# === Redis ===
-SOLESEARCH_REDIS_URL=
+# === Celery ===
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
 # =============
+
+# === Redis ===
+REDIS_URL=
+# ===============
+
+# === Logging ===
+LOGFIRE_TOKEN=
+# ===============
 
 # === StockX API ===
 # See https://developer.stockx.com/
